--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="jumbotron text-center">
       <img src="img/afrizzaal.png" alt="M Afrijal Amrulah" width="150" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">M Afrijal Amrulah</h1>
-      <p class="lead">Web Design | Web Programming</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,32L288,160L576,288L864,64L1152,256L1440,256L1440,320L1152,320L864,320L576,320L288,320L0,320Z"></path></svg>
     </section>
     <!-- End Jumbotron -->
@@ -262,6 +262,17 @@
         once: true,
         duration: 2000,
       });
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/TextPlugin.min.js"></script>
+
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.lead', { duration: 2.5, delay: 2, text: 'Web Design | Web Programming' });
+      gsap.from('.jumbotron img', { duration: 1, y: -100, opacity: 0, ease: 'power' });
+      gsap.from('.navbar', { duration: 1.5, y: '-100%', opacity: 0, delay: 0.5, ease: 'bounce' });
+      gsap.from('.display-4', { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: 'back' });
     </script>
 
     <script>
